bug: la goutte saccade beaucoup trop c'est la crise